@@ -1,0 +1,5 @@
+!Metaclass methodsFor: 'printing'!
+
+printString
+    ^instanceClass name asString, ' class'
+! !
