@@ -1,13 +1,18 @@
 Import ('env')
 
+libenv = env.Clone ()
+
+if libenv['PLATFORM'] == 'win32':
+    libenv.MergeFlags ('-DBUILD_DLL')
+
 # Build the shared library
 
-lib_objects = env.SharedObject (Split ("""
+lib_objects = libenv.SharedObject (Split ("""
 	    syx-bytecode.c syx-init.c syx-interp.c
 	    syx-lexer.c syx-memory.c syx-object.c syx-parser.c
 	    syx-primitives.c syx-scheduler.c syx-utils.c syx-error.c
 	    """))
-lib_shared = env.SharedLibrary (target='syx', source=lib_objects)
+lib_shared = libenv.SharedLibrary (target='syx', source=lib_objects)
 
 # Build the executable
 
