@@ -3,6 +3,7 @@
 
 #include <stdio.h>
 #include "syx-types.h"
+#include "syx-object.h"
 
 typedef syx_uint32 SyxErrorType;
 
