@@ -1,6 +1,7 @@
 #ifndef SYX_UTILS_H
 #define SYX_UTILS_H
 
+#include "syx-platform.h"
 #include "syx-types.h"
 #include "syx-lexer.h"
 
@@ -9,12 +10,6 @@ syx_bool syx_cold_file_in (syx_symbol filename);
 
 syx_bool syx_semaphore_signal (SyxOop semaphore);
 void syx_semaphore_wait (SyxOop semaphore);
-
-#ifdef WINDOWS
-        #define SYX_PATH_SEPARATOR '\\'
-#else
-        #define SYX_PATH_SEPARATOR '/'
-#endif
 
 /* Utilities to interact with Smalltalk */
 
